# Handwritten-Flowchart-Evaluator

./: .gitignore  README.md  app.py  flowchart_pipeline.py  inference_bboxes.py  old_utils.py  pyproject.toml  requirements.txt
